[+] docker and ci init

--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,20 @@
 {
     "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Better than wish",
+    "keywords": ["wish"],
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.2.0",
         "braintree/braintree_php": "^3.26",
-        "cviebrock/image-validator": "^2.2",
         "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "doctrine/dbal": "^2.6",
-        "edujugon/push-notification": "3.0.*",
         "fideloper/proxy": "~3.3",
-        "guzzlehttp/guzzle": "~6.0",
         "infyomlabs/adminlte-templates": "5.5.x-dev",
-        "infyomlabs/laravel-generator": "5.5.x-dev",
-        "infyomlabs/swagger-generator": "dev-master",
-        "intervention/image": "^2.4",
         "jlapp/swaggervel": "dev-master",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0",
-        "marcl/amazonproductapi": "^3.0",
         "nesbot/carbon": "^1.22",
         "ramsey/uuid": "^3.7",
         "santigarcor/laratrust": "5.0.*",
