--- a/docker/nginx_ssl.conf
+++ b/docker/nginx_ssl.conf
@@ -3,15 +3,15 @@ server {
     server_name %server_name%;
     return 301 https://$server_name$request_uri;
 }
-
 server {
     listen 443 default_server ssl;
     root /var/www/html/public;
     index index.php index.html;
     server_name %server_name%;
 
-    ssl_certificate /var/www/ssl/certificate.cer;
-    ssl_certificate_key /var/www/ssl/private.key;
+    #path to certificates
+    ssl_certificate /var/www/html/ssl/certificate.crt;
+    ssl_certificate_key /var/www/html/ssl/private.key;
 
     charset utf-8;
     sendfile off;
