--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-vendor/
-node_modules/
-.idea/
-
-# Laravel 5 & Lumen specific
-bootstrap/cache/
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/public/apidoc
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
-
 docker-compose.yml
-
-# Apidoc
-public/apidoc/
-
-public/vendor
-
