--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "~3.3",
         "infyomlabs/adminlte-templates": "5.5.x-dev",
         "jlapp/swaggervel": "dev-master",
+        "laracasts/flash": "3.0.2",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0",
