--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ deploy:
     - rm -rf ./tests
 
     - ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_SERVER_HOST "mkdir -p /var/www/wish"
-    - rsync -az --exclude-from=.gitlab-ci-exclude --no-perms --no-owner --no-group --delete-during -e "ssh -o StrictHostKeyChecking=no . $SSH_USER@$SSH_SERVER_HOST:/var/www/wish
+    - rsync -az --exclude-from=.gitlab-ci-exclude --no-perms --no-owner --no-group --delete-during -e "ssh -o StrictHostKeyChecking=no" . $SSH_USER@$SSH_SERVER_HOST:/var/www/wish
     - ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_SERVER_HOST "cd /var/www/wish && docker-compose up -d --force-recreate --remove-orphans && docker exec wish_php /bin/bash ./init_dev.sh"
   only:
     - develop
