--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ deploy:
     - echo -e "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
 
-    - sed -i -e "s/%server_name%/${SERVER_HOST}/g" ./docker/nginx.conf
-    - sed -i -e "s/%server_name%/${SERVER_HOST}/g" ./docker/nginx_ssl.conf
+    - sed -i -e "s/%server_name%/${SSH_SERVER_HOST}/g" ./docker/nginx.conf
+    - sed -i -e "s/%server_name%/${SSH_SERVER_HOST}/g" ./docker/nginx_ssl.conf
 
     - mkdir ./ssl
     - echo "$SSL_CERTIFICATE" > ./ssl/certificate.crt
