--- a/docker/nginx_ssl.conf
+++ b/docker/nginx_ssl.conf
@@ -5,13 +5,13 @@ server {
 }
 server {
     listen 443 default_server ssl;
-    root /var/www/html/public;
+    root /var/www/public;
     index index.php index.html;
     server_name %server_name%;
 
     #path to certificates
-    ssl_certificate /var/www/html/ssl/certificate.crt;
-    ssl_certificate_key /var/www/html/ssl/private.key;
+    ssl_certificate /var/www/ssl/certificate.crt;
+    ssl_certificate_key /var/www/ssl/private.key;
 
     charset utf-8;
     sendfile off;
