--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -22,7 +22,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:php7-fpm]
-command=/usr/sbin/php-fpm7.1 -c /etc/php/7.1/fpm
+command=/usr/local/sbin/php-fpm
 autostart=true
 autorestart=true
 priority=5
@@ -30,18 +30,6 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-
-[program:nginx]
-command=/usr/sbin/nginx
-autostart=true
-autorestart=true
-priority=10
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-stdout_events_enabled=true
-stderr_events_enabled=true
 
 [program:crond]
 command=/usr/sbin/cron -f
@@ -55,7 +43,7 @@ stderr_logfile_maxbytes=0
 
 [program:wish-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/html/artisan queue:work --tries=3
+command=php /var/www/artisan queue:work --tries=3
 autostart=true
 autorestart=true
 user=root
@@ -63,4 +51,4 @@ numprocs=4
 redirect_stderr=true
 logfile_maxbytes=3000
 logfile_backups=14
-stdout_logfile=/var/www/html/storage/logs/worker.log
+stdout_logfile=/var/www/storage/logs/worker.log
