[#] add password reset

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=key
-APP_URL=localhos
-APP_NAME=BetetrThanWish
+APP_URL=localhost
+APP_NAME=Wish
 
 DB_HOST=database_host
 DB_DATABASE=database
@@ -10,6 +10,7 @@ DB_USERNAME=user
 DB_PASSWORD=password
 
 JWT_SECRET=secret
+JWT_TTL=129600
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -18,6 +19,8 @@ QUEUE_DRIVER=database
 MAIL_DRIVER=mailgun
 MAILGUN_DOMAIN=domain
 MAILGUN_SECRET=key
+MAIL_FROM_ADDRESS=no-reply@wish.com
+MAIL_FROM_NAME=Wish
 
 BT_ENVIRONMENT=production
 BT_MERCHANT_ID=id
