--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "infyomlabs/adminlte-templates": "5.5.x-dev",
         "jlapp/swaggervel": "dev-master",
         "laracasts/flash": "3.0.2",
