--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.2.0",
+        "php": "^7.1",
         "braintree/braintree_php": "^3.26",
         "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "doctrine/dbal": "^2.6",
@@ -15,6 +15,7 @@
         "jlapp/swaggervel": "dev-master",
         "laracasts/flash": "3.0.2",
         "laravel/framework": "5.5.*",
+        "laravel/socialite": "^3.1",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0",
         "nesbot/carbon": "^1.22",
