--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
         "infyomlabs/adminlte-templates": "5.5.x-dev",
+        "infyomlabs/laravel-generator": "5.7.x-dev",
         "jlapp/swaggervel": "dev-master",
         "laracasts/flash": "3.0.2",
         "laravel/framework": "5.5.*",
+        "laravel/socialite": "^3.1",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0",
         "nesbot/carbon": "^1.22",
