[+] Updated env, ApiDoc for social services login system

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,9 @@ BT_ENVIRONMENT=production
 BT_MERCHANT_ID=id
 BT_PUBLIC_KEY=key
 BT_PRIVATE_KEY=key
+
+FACEBOOK_CLIENT_ID=id
+FACEBOOK_CLIENT_SECRET=key
+
+GOOGLE_CLIENT_ID=id
+GOOGLE_CLIENT_SECRET=key
