--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/dbal": "^2.6",
         "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "~3.3",
+        "google/apiclient": "^2.2",
         "guzzlehttp/guzzle": "^6.3",
         "infyomlabs/adminlte-templates": "5.5.x-dev",
         "infyomlabs/laravel-generator": "5.7.x-dev",
