[+] Added setter for icon attribute to Category

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_DEBUG=true
 APP_KEY=key
 APP_URL=localhost
 APP_NAME=Wish
+APP_URL=https://wish.appus.work
+FILESYSTEM_DRIVER=public
 
 DB_HOST=database_host
 DB_DATABASE=database
