--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "~3.3",
         "google/apiclient": "^2.2",
+        "gregwar/captcha": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
         "infyomlabs/adminlte-templates": "5.5.x-dev",
         "infyomlabs/laravel-generator": "5.7.x-dev",
