--- a/docker/nginx_ssl.conf
+++ b/docker/nginx_ssl.conf
@@ -13,6 +13,8 @@ server {
     ssl_certificate /var/www/ssl/certificate.crt;
     ssl_certificate_key /var/www/ssl/private.key;
 
+    client_max_body_size 28m;
+
     charset utf-8;
     sendfile off;
     access_log off;
