[#] refactoring env file

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,6 @@ APP_DEBUG=true
 APP_KEY=key
 APP_URL=localhost
 APP_NAME=Wish
-APP_URL=https://wish.appus.work
-FILESYSTEM_DRIVER=public
 
 DB_HOST=database_host
 DB_DATABASE=database
@@ -17,21 +15,22 @@ JWT_TTL=129600
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=database
+FILESYSTEM_DRIVER=public
 
 MAIL_DRIVER=mailgun
 MAILGUN_DOMAIN=domain
-MAILGUN_SECRET=key
+MAILGUN_SECRET=secret
 MAIL_FROM_ADDRESS=no-reply@wish.com
 MAIL_FROM_NAME=Wish
 
-BT_ENVIRONMENT=production
-BT_MERCHANT_ID=id
-BT_PUBLIC_KEY=key
-BT_PRIVATE_KEY=key
-
 FACEBOOK_CLIENT_ID=id
-FACEBOOK_CLIENT_SECRET=key
+FACEBOOK_CLIENT_SECRET=secret
 
 GOOGLE_CLIENT_ID=id
-GOOGLE_CLIENT_ID_IOS=ios_id
-GOOGLE_CLIENT_SECRET=key
+GOOGLE_CLIENT_SECRET=secret
+GOOGLE_CLIENT_ID_IOS=id
+
+BT_ENVIRONMENT=sandbox
+BT_MERCHANT_ID=4s83mpgk5qbnhnvt
+BT_PUBLIC_KEY=key
+BT_PRIVATE_KEY=ley
