--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=key
 APP_URL=localhost
-APP_NAME=Wish
+APP_NAME=SkyCart
 
 DB_HOST=database_host
 DB_DATABASE=database
@@ -20,7 +20,7 @@ FILESYSTEM_DRIVER=public
 MAIL_DRIVER=mailgun
 MAILGUN_DOMAIN=domain
 MAILGUN_SECRET=secret
-MAIL_FROM_ADDRESS=no-reply@wish.com
+MAIL_FROM_ADDRESS=no-reply@skaycart.com
 MAIL_FROM_NAME=Wish
 
 FACEBOOK_CLIENT_ID=id
