--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ FILESYSTEM_DRIVER=public
 MAIL_DRIVER=mailgun
 MAILGUN_DOMAIN=domain
 MAILGUN_SECRET=secret
-MAIL_FROM_ADDRESS=no-reply@skaycart.com
+MAIL_FROM_ADDRESS=no-reply@skycart.com
 MAIL_FROM_NAME=Wish
 
 FACEBOOK_CLIENT_ID=id
@@ -31,6 +31,6 @@ GOOGLE_CLIENT_SECRET=secret
 GOOGLE_CLIENT_ID_IOS=id
 
 BT_ENVIRONMENT=sandbox
-BT_MERCHANT_ID=4s83mpgk5qbnhnvt
+BT_MERCHANT_ID=id
 BT_PUBLIC_KEY=key
 BT_PRIVATE_KEY=ley
