--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "^1.6",
+        "aftership/aftership-php-sdk": "^5.1",
         "braintree/braintree_php": "^3.26",
         "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "doctrine/dbal": "^2.8",
