--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,14 @@
 stages:
   - build
   - js_build
+  - tests
   - deploy
-
+variables:
+  MYSQL_ROOT_PASSWORD: root
+  MYSQL_USER: homestead
+  MYSQL_PASSWORD: secret
+  MYSQL_DATABASE: homestead
+  DB_HOST: mysql
 build:
   stage: build
   image: composer
@@ -18,6 +24,7 @@ build:
     expire_in: 1h
   only:
     - develop
+    - with-test
 
 js_build:
   stage: js_build
@@ -32,7 +39,25 @@ js_build:
     expire_in: 1h
   only:
     - develop
-
+    - with-test
+phpunit:
+  stage: tests
+  services:
+    - mysql:5.7
+  image: edbizarro/gitlab-ci-pipeline-php
+  script:
+    - composer install --prefer-dist --no-ansi --no-interaction --no-progress
+    - cp .env.test.example .env
+    - php artisan key:generate
+    - php artisan migrate:refresh --seed
+    - ./vendor/phpunit/phpunit/phpunit -v --coverage-text --colors=never --stderr
+    artifacts:
+      paths:
+        - ./storage/logs # for debugging
+      expire_in: 1 days
+      when: on_failure
+    only:
+      - with-test
 deploy:
   stage: deploy
   image: dinofizz/rsync-ssh
