--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,10 +41,11 @@ js_build:
     - with-tests
 phpunit:
   stage: tests
-  image: tmaier/docker-compose:latest
-  services:
-    - docker:dind
+  image: docker
   script:
+    - curl -L "https://github.com/docker/compose/releases/download/1.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    - chmod +x /usr/local/bin/docker-compose
+    - service docker start
     - docker-compose -f docker-compose.yml.test up -d --force-recreate --remove-orphans
     - docker exec socialapp_web_test sh ./init_test.sh
   artifacts:
