trying test configuration

--- a/.env.testing
+++ b/.env.testing
@@ -4,10 +4,14 @@ APP_KEY=key
 APP_URL=localhost
 APP_NAME=SkyCart
 
-DB_HOST=mysql
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=root
+DB_CONNECTION=mysql
+DB_HOST=test_db
+DB_PORT=3306
+DB_DATABASE=test
+DB_USERNAME=test
+DB_PASSWORD=test
+
+
 
 JWT_SECRET=secret
 JWT_TTL=129600
@@ -18,7 +22,8 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=database
 FILESYSTEM_DRIVER=public
 
-MAIL_DRIVER=mailgun
+MAIL_DRIVER=log
+
 MAILGUN_DOMAIN=domain
 MAILGUN_SECRET=secret
 MAIL_FROM_ADDRESS=no-reply@skycart.com
