[+] added first product controller test

--- a/.env.testing
+++ b/.env.testing
@@ -5,7 +5,7 @@ APP_URL=localhost
 APP_NAME=SkyCart
 
 DB_CONNECTION=mysql
-DB_HOST=test_db
+DB_HOST=database_host
 DB_PORT=3306
 DB_DATABASE=test
 DB_USERNAME=test
