[+] added code coverage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ phpunit:
   artifacts:
     paths:
       - ./storage/logs # for debugging
+      - ./public/phpunit
     expire_in: 1 days
     when: on_failure
   only:
