[+] added code quality to ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ stages:
   - build
   - js_build
   - deploy
+include:
+  - template: Code-Quality.gitlab-ci.yml
 variables:
   MYSQL_ROOT_PASSWORD: root
   MYSQL_USER: homestead
